--- a/SA整合/app/templates/base.html
+++ b/SA整合/app/templates/base.html
@@ -11,7 +11,7 @@
 <body>
     <script src="{{ url_for('static', filename='base.js') }}"></script>
     <div class="chat-wrapper">
-        <nav class="nav-bar" style="z-index: 1000;>
+        <nav class="nav-bar" style="z-index: 1000;">
             <button id="menu-toggle">
               <i class="bi bi-border-width"></i>
             </button>
