--- a/SA整合/app/templates/chat.html
+++ b/SA整合/app/templates/chat.html
@@ -256,7 +256,7 @@
         </a>
         <span>輔大資管系</span>
         <div class="nav-link">
-          <i class="bi bi-house-door"></i><a href="#">首頁</a>
+          <i class="bi bi-house-door"></i><a href="/dashboard">首頁</a>
 
           {% if session.get('user') %}
           <i class="bi bi-megaphone"></i><a href="/post/interact">交流區</a>
