--- a/SA整合/app/templates/register.html
+++ b/SA整合/app/templates/register.html
@@ -105,8 +105,10 @@
       </div>
       <div>
         <label for="nickname">暱稱：</label>
-        <input type="text" id="nickname" name="nickname" placeholder="可選填" maxlength="30" />
+        <input type="text" id="nickname" name="nickname" placeholder="請輸入暱稱" maxlength="30" required/>
+        <!-- <input type="text" id="nickname" name="nickname" placeholder="可選填" maxlength="30" /> -->
       </div>
+
       <div>
         <label for="photo">上傳頭像：</label>
         <input type="file" id="photo" name="photo" accept="image/*" />
