--- a/SA整合/app/templates/interact.html
+++ b/SA整合/app/templates/interact.html
@@ -41,7 +41,7 @@
                 </div>
                 <h2 class="card-title">{{ post.title }}</h2>
                 <p class="card-text">{{ post.content }}</p>
-                <p class="card-user">發文者：{{ post['user_name'] }}</p>
+                <p class="card-user">發文者：{{ post['nickname'] }}</p>
                 <p class="card-hashtag">
                     分類：
                     {% if post['hashtag_name'] %}
